# SoeiroTech-Boilerplate-Oficial

./: README.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml
backend/accounts/: context_processors.py  forms.py  models.py  signals.py  tests.py  views.py
backend/api/: urls.py  views.py
backend/core/: asgi.py  urls.py
backend/core/settings/: base.py  prod.py
backend/dashboard/: urls.py  views.py
backend/scripts/: soeirotech-new.sh
backend/templates/: 404.html  500.html  base.html
backend/templates/dashboard/: dashboard.html
docs/: REFATORACOES.md  index.md
docs/backend/: apis.md  arquitetura.md  models.md`
scripts/: soeirotech-new.sh
