[tool.poetry]
name = "academus"
version = "0.1.0"
description = "Academus - Sistema de Gestão Educacional com Django"
authors = ["SoeiroTech <dev@soeiro.tech>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core" },
    { include = "accounts" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
djangorestframework = "^3.15.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
dj-database-url = "^3.0.1"
pillow = "^12.0.0"
django-extensions = "^4.1"
django-jazzmin = "^3.0.1"

mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocstrings = "^0.26.0"
mkdocstrings-python = "^1.10.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".venv","__pycache__","migrations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
